--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /public/hot
 /public/storage
 /public/files
+/public/uploads/*
 /storage/*.key
 /vendor
 /.idea
@@ -11,4 +12,3 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
-/config/database.php
