Updated .gitinore to do not push bower dependencies and edited angularjs service $http URL with config.base_url.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /node_modules
+/public/bower/*
+/public/files
 /public/hot
 /public/storage
-/public/files
 /public/uploads/*
 /storage/*.key
 /vendor
