--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "laravel-echo": "^1.3.5",
     "pusher-js": "^4.2.2"
   }
