Edit docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
 version: "3.8"
 services:
   web:
-    build: .
+    build: 
+      context: .
+      dockerfile: .docker/Dockerfile
+    image: leandrosilva/php5.6-apache
     ports:
-      - "8080:80"
+      - 8080:80
     volumes:
       -.:/var/www/html
